--- a/app/assets/stylesheets/modules/badges.sass
+++ b/app/assets/stylesheets/modules/badges.sass
@@ -74,6 +74,7 @@
   padding: 16px
   position: relative
   text-align: center
+  transform: translateZ(0)
 
 .badges-footer-badge
   @extend .badges-footer
