--- a/app/assets/stylesheets/modules/badge.sass
+++ b/app/assets/stylesheets/modules/badge.sass
@@ -9,12 +9,12 @@
   &:nth-of-type("#{ $columns }n")
     border-right: none
 
-= filter($pixels)
-  -moz-filter: blur($pixels)
-  -ms-filter: blur($pixels)
-  -o-filter: blur($pixels)
-  -webkit-filter: blur($pixels)
-  filter: blur($pixels)
+= grayscale_filter($pixels)
+  -moz-filter: grayscale($pixels)
+  -ms-filter: grayscale($pixels)
+  -o-filter: grayscale($pixels)
+  -webkit-filter: grayscale($pixels)
+  filter: grayscale($pixels)
 
 = transition($transition)
   -moz-transition: $transition
@@ -74,6 +74,5 @@
   padding: 10px 0
 
 .badge-unknown
-  +filter(5px)
-  opacity: 0.3
+  +grayscale_filter(100%)
   transform: translateZ(0)
